# ArmorStand

./: .bazelignore  .bazelrc  .clang-format  .gitignore  BUILD.bazel  MODULE.bazel  NEWS-en.md  NEWS-zh.md  README.md  maven_install.json  properties.bzl
.github/workflows/: build.yml
blazerod/: BUILD.bazel
blazerod/example/ball_block/: BUILD.bazel
blazerod/example/ball_block/src/main/java/top/fifthlight/blazerod/example/ballblock/: BallBlockMod.java
blazerod/model/example-models/: BUILD.bazel
blazerod/model/model-assimp/: BUILD.bazel
blazerod/model/model-base/: BUILD.bazel
blazerod/model/model-base/src/main/kotlin/top/fifthlight/blazerod/model/: NodeComponent.kt  PhysicalJoint.kt  RigidBody.kt
blazerod/model/model-formats/: BUILD.bazel
blazerod/model/model-gltf/: BUILD.bazel
blazerod/model/model-pmd/: BUILD.bazel
blazerod/model/model-pmx/: BUILD.bazel  PmxLoader.kt
blazerod/model/model-pmx/src/main/kotlin/top/fifthlight/blazerod/model/pmx/: PmxLoader.kt
blazerod/model/model-pmx/src/main/kotlin/top/fifthlight/blazerod/model/pmx/format/: PmxJoint.kt
blazerod/model/model-vmd/: BUILD.bazel
blazerod/render/: BUILD.bazel
blazerod/render/fabric/: BUILD.bazel  BlazeRodFabric.kt
blazerod/render/game/: BUILD.bazel
blazerod/render/main/: BUILD.bazel
blazerod/render/main/layout/: BUILD.bazel  LayoutStrategy.kt
blazerod/render/main/physics/: PhysicsLibrary.java  PhysicsScene.cpp  PhysicsScene.kt  PhysicsWorld.cpp  PhysicsWorld.h  PhysicsWorld.kt  binding.cpp
blazerod/render/main/runtime/: BUILD.bazel  ModelInstanceImpl.kt  RenderSceneImpl.kt
blazerod/render/main/runtime/load/: ModelLoadInfo.kt  ModelPreprocessor.kt  SceneReconstructor.kt
blazerod/render/main/runtime/node/: UpdatePhase.kt
blazerod/render/main/runtime/node/component/: BoxUtil.kt  RenderNodeComponent.kt  RigidBodyComponent.kt
blazerod/render/main/runtime/renderer/: BUILD.bazel
blazerod/render/main/runtime/resource/: BUILD.bazel
blazerod/render/neoforge/: BUILD.bazel  BlazeRodNeoForge.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/: BlazeRod.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/model/: ModelInstance.kt  RenderScene.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/model/load/: ModelLoadInfo.kt  ModelPreprocessor.kt  ModelResourceLoader.kt  SceneReconstructor.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/model/node/: RenderNode.kt  UpdatePhase.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/model/node/component/: CameraNodeComponent.kt  IkTargetNodeComponent.kt  InfluenceSourceNodeComponent.kt  JointNodeComponent.kt  PrimitiveNodeComponent.kt  RenderNodeComponent.kt  RigidBodyNodeComponent.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/model/renderer/: ComputeShaderTransformRenderer.kt  Renderer.kt  VertexShaderTransformRenderer.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/model/resource/: RenderPhysicsJoint.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/physics/: PhysicsLibrary.kt
blazerod/render/src/main/kotlin/top/fifthlight/blazerod/util/: DrawUtil.kt  JmeDataUtil.kt  JmeVector.kt  JomlUtil.kt
blazerod/src/main/resources/: LICENSE
game/: BUILD.bazel  neoforge_yarn_fix.tiny
mod/: BUILD.bazel
mod/src/client/kotlin/top/fifthlight/armorstand/: PlayerRenderer.kt
mod/src/client/kotlin/top/fifthlight/armorstand/manage/model/: ModelItem.kt
mod/src/client/kotlin/top/fifthlight/armorstand/state/: ModelInstanceManager.kt
mod/src/client/kotlin/top/fifthlight/armorstand/ui/screen/: ConfigScreen.kt
mod/src/client/resources/assets/armorstand/lang/: en_us.json  ru_ru.json  zh_cn.json
mod/src/game/: BUILD.bazel
mod/src/main/resources/: LICENSE
repo/: neoforge.bzl
rule/: extract_jar.bzl  mod_info_jar.bzl
rule/modrinth_uploader/: ModrinthUploader.java
