load("@rules_kotlin//kotlin:core.bzl", "define_kt_toolchain", "kt_compiler_plugin")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@//rule:extract_update_log.bzl", "extract_update_log")
load("//:properties.bzl", "mod_version")
load("@rules_java//java:defs.bzl", "java_plugin")

kt_compiler_plugin(
    name = "serialization_plugin",
    compile_phase = True,
    id = "org.jetbrains.kotlin.serialization",
    stubs_phase = True,
    deps = [
        "@rules_kotlin//kotlin/compiler:kotlinx-serialization-compiler-plugin",
    ],
)

kt_jvm_library(
    name = "kotlin_serialization",
    srcs = [],
    visibility = ["//visibility:public"],
    exported_compiler_plugins = [":serialization_plugin"],
    exports = [
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core_jvm",
    ],
)

define_kt_toolchain(
    name = "kotlin_toolchain",
    jvm_target = "21",
    api_version = "2.0",
    language_version = "2.0",
)

extract_update_log(
    name = "update_log",
    visibility = ["//visibility:public"],
    version = mod_version,
    inputs = [
        "NEWS-zh.md",
        "NEWS-en.md",
    ],
)

platform(
    name = "android_arm32",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//os:android",
        "@platforms//cpu:armv7",
    ],
)

platform(
    name = "android_arm64",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//os:android",
        "@platforms//cpu:aarch64",
    ],
)

platform(
    name = "android_x86",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//os:android",
        "@platforms//cpu:x86_32",
    ],
)

platform(
    name = "android_x86_64",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//os:android",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "linux_x86",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_32",
    ]
)

platform(
    name = "linux_x86_64_glibc",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
        "@zig_sdk//libc:gnu.2.24",
    ],
)

platform(
    name = "linux_arm32_glibc",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:armv7",
        "@zig_sdk//libc:gnu.2.24",
    ],
)

platform(
    name = "linux_arm64_glibc",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
        "@zig_sdk//libc:gnu.2.24",
    ],
)

platform(
    name = "windows_x86",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_32",
    ]
)

platform(
    name = "windows_x86_64",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "windows_arm64",
    visibility = ["//visibility:public"],
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:aarch64",
    ]
)
