load("@rules_java//java:defs.bzl", "java_library")

alias(
    name = "example-models",
    visibility = ["//visibility:public"],
    actual = ".",
)

alias(
    name = "alicia_solid_vrm",
    visibility = ["//visibility:public"],
    actual = "AliciaSolid.vrm",
)

alias(
    name = "armorstand_vrm",
    visibility = ["//visibility:public"],
    actual = "armorstand.vrm",
)

alias(
    name = "interpolation_test_glb",
    visibility = ["//visibility:public"],
    actual = "InterpolationTest.glb",
)

java_library(
    name = "default_models",
    resource_strip_prefix = "blazerod/model/example-models",
    resources = ["armorstand.vrm"],
    visibility = ["//visibility:public"],
)